@@ -582,7 +582,7 @@ if(ENABLE_TESTS)
 	find_package( Boost 1.36 REQUIRED COMPONENTS unit_test_framework )
 endif(ENABLE_TESTS)
 if(ENABLE_GAME)
-	find_package( FriBiDi )
+	find_package( FriBiDi 0.10.9 )
 	if(ENABLE_FRIBIDI AND FRIBIDI_LIBRARIES)
 		add_definitions(-DHAVE_FRIBIDI)
 	elseif(ENABLE_FRIBIDI AND NOT FRIBIDI_LIBRARIES)
