@@ -627,17 +627,10 @@ void text_surface::bidi_cvt()
 	FriBidiStrIndex n;
 
 
-#ifdef	OLD_FRIBIDI
-	n = fribidi_utf8_to_unicode (c_str, len, bidi_logical);
-#else
 	n = fribidi_charset_to_unicode(FRIBIDI_CHAR_SET_UTF8, c_str, len, bidi_logical);
-#endif
 	fribidi_log2vis(bidi_logical, n, &base_dir, bidi_visual, NULL, NULL, NULL);
-#ifdef	OLD_FRIBIDI
-	fribidi_unicode_to_utf8 (bidi_visual, n, utf8str);
-#else
+
 	fribidi_unicode_to_charset(FRIBIDI_CHAR_SET_UTF8, bidi_visual, n, utf8str);
-#endif
 	is_rtl_ = base_dir == FRIBIDI_TYPE_RTL;
 	str_ = std::string(utf8str);
 	delete[] bidi_logical;
