@@ -569,6 +569,7 @@ Version 1.13.0-dev:
    * Remove support for legacy style unit abilities descriptions.
    * Fixed bug #23445: set default build type in cmake to "Release" to ensure
      that the game is not unoptimized
+   * Increased minimum version of FriBiDi to 0.10.9 in cmake to match scons
 
 Version 1.11.11:
  * Add-ons server:
